Add atomic BatchApplyObject for multi-ref BatchRefUpdate execution
Introduce a parallel batch-apply stack, fully isolated from the
single-ref ApplyObject machinery, and switch BatchApplyObjectAction
over to it. After this commit a multi-ref batch is applied atomically
through one BatchRefUpdate: any per-command rejection aborts the whole
batch instead of leaving earlier refs in place. That closes the
half-apply behavior on the upstream master code path.

Files added (4):

  fetch/BatchApplyObject
        Opens the repository (via LocalGitRepositoryManagerProvider),
        inserts blobs/tree/commit through one ObjectInserter, builds
        a BatchRefUpdate, executes it via
        bru.execute(rw, NullProgressMonitor.INSTANCE), returns a
        BatchRefUpdateState. All BatchRefUpdate use is confined here.
        Uses java.util.Optional (not Guava).

  fetch/BatchRefUpdateState
        Wraps the executed BRU. getCommands(), getResults(),
        isSuccessful(), toLogLine().

  api/exception/BatchRefUpdateException
        Batch-only sibling of RefUpdateException. Carries the
        BatchRefUpdateState; containsRejectedResult() powers the
        draft-comments rejection branch in BatchApplyObjectAction.

  api/BatchApplyObjectCommand
        Orchestration sibling of ApplyObjectCommand. batchApplyObjects
        starts the metrics timer, calls BatchApplyObject.applyBatch,
        populates the successful-applies cache, emits one
        FetchRefReplicatedEvent per ReceiveCommand BEFORE throwing
        BatchRefUpdateException on failure (multi-site forwarders
        consume by cardinality), and includes an exhaustive
        decodeResult(ReceiveCommand) -> RefUpdate.Result switch with
        no default arm (so a new JGit value becomes a compile error).

Files modified (2):

  api/BatchApplyObjectAction
        Inject (BatchApplyObjectCommand, BatchApplyObjectInputValidator)
        instead of (ApplyObjectCommand, BatchApplyObjectInputValidator).
        Replace t